# pySigma-backend-logpoint

./: .gitignore  README.md  coverage-badge.json  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/logpoint/: __init__.py  logpoint.py
sigma/pipelines/logpoint/: __init__.py  azure.py  defers_contains.py  linux.py  logpoint_mapping.py  m365.py  windows.py
tests/: test_backend_logpoint.py  test_pipelines_azure.py  test_pipelines_defers_contain.py  test_pipelines_linux.py  test_pipelines_o365.py  test_pipelines_windows.py
