[tool.poetry]
name = "pysigma-backend-logpoint"
version = "0.2.0"
description = "pySigma Logpoint backend"
readme="README.md"
authors = ["Surya Majhi <suryamajhi20@gmail.com>", "Swachchhanda Shrawan Poudel <swachchhandashrawan@gmail.com>"]
license = "LGPL-2.1-only"
repository = "https://github.com/logpoint/pySigma-backend-logpoint"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coverage = "^7.5.3"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
